<resources>
    <string name="app_name">N2L Practice</string>
    <string name="app_version">Ver:1.0</string>

    <string name="learn">LEARN</string>
    <string name="listen">LISTEN</string>
    <string name="practice">PRACTICE</string>
    <string name="present">PRESENT</string>
    <string name="time_table">TIME TABLE</string>
    <string name="my_progress">MY PROGRESS</string>
    <string name="my_video">MY VIDEOS</string>
    <string name="profile">PROFILE</string>
    <string name="sync">Sync</string>
    <string name="label_enter_email_id">Enter Email Id</string>
    <string name="label_enter_full_name">Enter Full Name</string>
    <string name="label_upload_message">upload passport size image</string>
    <string name="label_enter_nick_name">Enter Nick Name (optional)</string>
    <string name="label_enter_mobile_no_1">Enter Mobile No</string>
    <string name="label_enter_mobile_no_2">Enter Mobile No. (optional)</string>
    <string name="label_enter_friend_mobile_no">Enter Friend Mobile No</string>
    <string name="label_generate_otp">Generate OTP</string>
    <string name="label_reset">Reset</string>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_note">Note:-Mobile No. of your friend who referred N2LEnglish to you (optional).</string>

    <string name="label_add_friend">Add Friend</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_profile">PROFILE</string>
    <string name="label_registration">REGISTRATION</string>
    <string name="label_user_registration">User Registration</string>
    <string name="label_create_pin">Create Pin</string>
    <string name="label_user_id">Enter User Id</string>
    <string name="label_otp">Enter OTP</string>
    <string name="label_pin_1">Enter 4 Digit PIN</string>
    <string name="label_pin_2">Re-Enter 4 Digit PIN</string>
    <string name="label_back">Back</string>
    <string name="label_your_name">Your Name</string>
    <string name="label_enter_pin">Enter User PIN</string>
    <string name="label_login">Login</string>
    <string name="label_mpin">MPIN</string>
    <string name="label_enter_mpin">Enter 4 digit Pin</string>
    <string name="label_enter_re_mpin">Re-enter 4 digit PIN</string>
    <string name="label_forgot_pin">Forgot Pin</string>
    <string name="label_required">*Required</string>
    <string name="label_selection_required">*Selection Required</string>
    <string name="label_show_instructions">Show instructions</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Close">Close</string>
    <string name="Ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="label_single">Single</string>
    <string name="label_multi">Multi</string>
    <string name="label_model_practice">Select Your Mode Of Practice</string>
    <string name="login_failure_msg">wrong pin.please try again.</string>
    <string name="label_select_content">Select Content</string>
    <string name="label_select_topic">Select Topic</string>
    <string name="label_continue">Continue</string>
    <string name="label_select_dialogue">Select Dialogue</string>
    <string name="label_select_Pause">Pause(in Seconds)</string>
    <string name="label_select_speaker_role">Speaker Role</string>
    <string name="label_select_friend">Choose Your Friend</string>
    <string name="label_end">End</string>
    <string name="label_speak">Please Speak</string>
    <string name="label_speak_msg">Speak %1$s</string>
    <string name="label_speak_name">%1$s</string>
    <string name="label_instruction">Instruction</string>
    <string name="label_listening">Listen the Audio</string>
    <string name="label_reverse_time">00:00</string>
    <string name="label_pin_change">Pin Change</string>
    <string name="label_new_pin">Enter New MPin</string>
    <string name="label_confirm_pin">Enter Confirm MPin</string>

    <string name="menu_update_profile">Update Profile</string>
    <string name="menu_update_mobil_no">Update Mobile No</string>
    <string name="menu_change_pin">Change PIn</string>
    <string name="menu_Feedback">Feedback</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="menu_friend_list">Friend List</string>
    <string name="menu_friend_accept_reject">View Friend Request</string>

    <string name="heading_information">Information</string>
    <string name="msg_download_practice">Do you want to download %1s pictures for practice sessions?</string>
    <string name="msg_end_practice">Do you want to end practice?</string>
    <string name="msg_end__mid_practice">Do you want to quit?</string>
    <string name="msg_start_session">"Let's start practicing"</string>
    <string name="msg_pin_change">Are you sure you want to change MPin?</string>
    <string name="heading_error">Error</string>
    <string name="msg_timer">%1$s:%2$s</string>
    <string name="style_square">square_box</string>
    <string name="mask_character">\u2022</string>

    <string name="video_status_msg">Generating video %1s %1s please wait </string>
    <string name="update_wait_msg">Updating, Please wait</string>
    <string name="loading">Loading ....</string>

    <string name="project_package_name">practice.english.n2l</string>

    <string name="my_points">My Points</string>
    <string name="compare_with_my_friends">Compare With My Friends</string>
    <string name="my_activity">My Activity</string>
    <string name="_100">100</string>
    <string name="practice_name">Practice Name</string>
    <string name="practice_point">Point</string>
    <string name="practice_upload_date">upload Date</string>
    <string name="delete_video_msg">Do you want to delete the video?</string>
    <string name="delete_msg">Are you sure you want to delete the practice?</string>
    <string name="upload_msg">Are you sure you want to upload the practice?</string>
    <string name="download_msg">Are you sure you want to download the practice?</string>
    <string name="unfriend_msg">Are you sure you want to unfriend %1s?</string>
    <string name="delete_success_msg">Video deleted successfully</string>
    <string name="update_success_msg">Updated Successfully</string>
    <string name="record_not_available">Record Not Available</string>
    <string name="video_status_complete_msg">Video creation completed.</string>
    <string name="msg_download_sync">Do you want to sync master data?</string>
    <string name="msg_success_sync">Master data sync successfully</string>
    <string name="msg_success_pin_change">MPin Change successfully</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_recoding_logout">Are you sure you want to exit the answer recoding?</string>
    <string name="total_earn_points">Total Earn Points : %1s</string>
    <string name="total_num_question"> %1d/%2d</string>
    <string name="End_with_Video_Creation">End with Video \u0020\u0020\u0020Creation</string>
    <string name="End_without_Video_Creation">End without Video \u0020\u0020\u0020Creation</string>
    <string name="view_friends">View Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="unfriend">UnFriend</string>
    <string name="accept_msg">Are you sure you want to accept friend request?</string>
    <string name="reject_msg">Are you sure you want to reject friend request?</string>
    <string name="label_Share">Share</string>
    <string name="label_date">Date</string>
    <string name="label_type">Type</string>
    <string name="dialog_success_friend_request_share">Do you want to send friend request to %1s</string>
    <string name="label_share_video">Share Video</string>
    <string name="label_view_video">View Video</string>
    <string name="label_enter_profile_image">before click upload profile select new profile image</string>
    <string name="feature_not_implemented">This feature is not yet implemented</string>>
    <string name="dialog_practice_exception_message">There is some error in creating videos on your smart phone. This video will be available in the next 24 hours.</string>
    <string name="record_success_msg">Record audio permission must be accepted first before starting the next process.</string>
    <string name="help_settings">Help</string>
    <string name="registration_settings">Registration</string>
    <string name="profile_settings">Profile</string>
    <string name="my_progress_settings">My Progress</string>
    <string name="single_practice_settings">Single Practice</string>
    <string name="multi_practice_settings">Multi Practice</string>
    <string name="delete_account">Delete Account</string>
</resources>